log_filter 7.x-1.x, 2013-06-24
------------------------------
* Made sure, for backend db queries, that there's a max when there's an offset.
* Fixed deletion of zero events.
* Fixed pager display for when current offset is out of range of total matched events.
* Frontend translation error.
* Made text in log list table selectable (preventing dialog pop after dragging mouse).
* Made log deletion feed back messages fade.

log_filter 7.x-1.x, 2013-06-23
------------------------------
* Log deletion offset and max now reflects equivalent of current log list.

log_filter 7.x-1.x, 2013-06-22
------------------------------
* Implemented proxy type condition field, to prevent 'Illegal choice' errors for checklist due to dynamic options range.
* Paging done.

log_filter 7.x-1.x, 2013-06-20
------------------------------
* Use admin theme on log view pages (unless that setting is turned off).
* Renamed module css default variable.
* Now removes clear log form from standard dblog log view page.
* Filter name from url now requires non-digit as first character, and at least 2 chars length.
* Now allows for overwriting existing filter; implemented using non-AJAX request.
* Fixed bug in type_some handler; failed to notice change in criteria if unchecking an option.
* The update list buttons are no longer being disabled (no need for that anymore because the list is always AJAXed using current criteria).
* Implemented single event view.

log_filter 7.x-1.x, 2013-05-25
------------------------------
* Implemented log details view.

log_filter 7.x-1.x, 2013-05-12
------------------------------
* Implemented log deletion.

log_filter 7.x-1.x, 2013-05-01
------------------------------
* Get log list.

log_filter 7.x-1.x, 2013-04-02
------------------------------
* Changing a criterion of a stored filter now triggers edit mode, not adhoc mode.

log_filter 7.x-1.x, 2013-04-01
------------------------------
* _listFilters().

log_filter 7.x-1.x, 2013-03-28
------------------------------